[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/game/ui/AudioBusOptions.gd" type="Script" id=1]
[ext_resource path="res://assets/sound/UI/Minimalist13.ogg" type="AudioStream" id=2]
[ext_resource path="res://src/game/utils/AudioHandler.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/Default-Small.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/textures/ui/GUISprite.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.294118, 0.258824, 0.129412, 0.25098 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.298039, 0.196078, 0, 0.501961 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.215686, 0.517647, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.478431, 0.521569, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.0941176, 0.227451, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.270588, 0.294118, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.258824, 0.623529, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.682353, 0.745098, 0, 1 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 324, 100, 8, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 322, 114, 12, 12 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 5 )
region_rect = Rect2( 16, 51, 64, 9 )
margin_left = 31.0
margin_right = 31.0
margin_top = 4.0
margin_bottom = 4.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.686275, 0.341176, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_bottom = 3
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.360784, 0.180392, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_bottom = 3
border_color = Color( 0.8, 0.8, 0.8, 0 )

[node name="AudioBusOptions" type="PanelContainer"]
margin_right = 264.0
margin_bottom = 17.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
bus_name = "General"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 262.0
margin_bottom = 21.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 128.0
margin_bottom = 19.0
size_flags_horizontal = 3

[node name="BusNameLabel" type="Label" parent="HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_top = 3.0
margin_right = 33.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 4 )
text = "General"

[node name="MuteButton" type="Button" parent="HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 101.0
margin_right = 128.0
margin_bottom = 19.0
size_flags_horizontal = 10
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
toggle_mode = true
text = "Mute"

[node name="ButtonSounds" parent="HBoxContainer/HBoxContainer/MuteButton" instance=ExtResource( 3 )]
_audio_bus = "UI"
_audio_references = [ ExtResource( 2 ) ]
_pitch_scales = [ [ 0.95, 1.05 ] ]

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 19.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = -3

[node name="Volume" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 4 )
text = "Volume"
align = 1
valign = 2

[node name="SoundSlider" type="HSlider" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 10.0
margin_right = 128.0
margin_bottom = 19.0
focus_mode = 0
size_flags_horizontal = 3
custom_icons/grabber_disabled = SubResource( 5 )
custom_icons/grabber_highlight = SubResource( 6 )
custom_icons/grabber = SubResource( 5 )
custom_styles/slider = SubResource( 8 )
custom_styles/grabber_area_highlight = SubResource( 11 )
custom_styles/grabber_area = SubResource( 10 )
min_value = -80.0
max_value = 0.0

[connection signal="pressed" from="HBoxContainer/HBoxContainer/MuteButton" to="HBoxContainer/HBoxContainer/MuteButton/ButtonSounds" method="play"]
[connection signal="toggled" from="HBoxContainer/HBoxContainer/MuteButton" to="." method="_on_MuteButton_toggled"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
